--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-dotenv==1.0.1
 langchain==0.1.16
 langchain-community==0.0.34
 langchain-core==0.1.47
-langchain-groq==0.0.2
+langchain-groq
 langchain-google-genai==0.0.8
 
 # Vector store and embedding
